// PulseHA - HA Cluster Daemon
// Copyright (C) 2017-2021  Andrew Zak <andrew@linux.com>
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published
// by the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package proto;

service Server {
    // Perform GRPC Health Check
    rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse);
    // Join Cluster
    rpc Join (JoinRequest) returns (JoinResponse);
    // Sync Config
    rpc ConfigSync (ConfigSyncRequest) returns (ConfigSyncResponse);
    // Leave Cluster
    rpc Leave (LeaveRequest) returns (LeaveResponse);
    // Remove from Cluster
    rpc Remove (RemoveRequest) returns (RemoveResponse);
    // Promote
    rpc Promote (PromoteRequest) returns (PromoteResponse);
    // demote
    rpc MakePassive (MakePassiveRequest) returns (MakePassiveResponse);
    // Bring up IP
    rpc BringUpIP (UpIpRequest) returns (UpIpResponse);
    // Bring down IP
    rpc BringDownIP (DownIpRequest) returns (DownIpResponse);
    // Bring down IP
    rpc Logs (LogsRequest) returns (LogsResponse);
    // Get detailed information for a particular node
    rpc Describe (DescribeRequest) returns (DescribeResponse);
    // Fail over vote
    rpc Vote (VoteRequest) returns (VoteResponse);
}

message HealthCheckRequest {
    // Our List of Members
    repeated MemberlistMember memberlist = 1;
    // When the node went active
    string ActiveTime = 2;
}
message HealthCheckResponse {}

message JoinRequest {
    string message = 1;
    string bind_ip = 2;
    string bind_port = 3;
    string ip = 4;
    string port = 5;
    string hostname = 6;
    bool replicated = 7;
    bytes config = 8;
    string token = 9;
    string ca_crt = 10;
    string ca_key = 11;
    int32 errorCode = 12;
    string uid = 13;
}
message JoinResponse {}

message ConfigSyncRequest {
    string message = 1;
    bytes config = 2;
    bool replicated = 3;
}
message ConfigSyncResponse {}

message LeaveRequest {
    string message = 1;
    string hostname = 2;
    bool replicated = 3;
    int32 errorCode = 4;
}
message LeaveResponse {}

message RemoveRequest {
    string message = 1;
    string hostname = 2;
    bool replicated = 3;
    int32 errorCode = 4;
}
message RemoveResponse {}

message PromoteRequest {
    string message = 1;
    string member = 2;
    int32 errorCode = 3;
}
message PromoteResponse {}

message MakePassiveRequest {
    string message = 1;
    string member = 2;
    int32 errorCode = 3;
}
message MakePassiveResponse {}

message UpIpRequest {
    string message = 1;
    string iface = 2;
    repeated string ips = 3;
}
message UpIpResponse {}

message BringIpRequest {
    string message = 1;
    string iface = 2;
    repeated string ips = 3;
}
message BringIpResponse {}

message DownIpRequest {
    string message = 1;
    string iface = 2;
    repeated string ips = 3;
}
message DownIpResponse {}

message LogsRequest {
    enum Level {
        INFO = 0;
        WARNING = 1;
        ERROR = 2;
        DEBUG = 3;
    }
    string message = 1;
    string node = 2;
    Level level = 3;
}
message LogsResponse {}

message DescribeRequest {
    string message = 1;
    int32 cpuUsage = 2;
    int32 memUsage = 3;
    string uid = 4;
    int32 diskUsage = 5;
    string uptime = 6;
    string status = 7;
    string latency = 8;
    string hostname = 9;
    string bindAddress = 10;
    string lastReceived = 11;
}
message DescribeResponse {}

message VoteRequest {}
message VoteResponse {}

message MemberlistMember {
    string hostname = 1;
    MemberStatus.Status status = 2;
    string lastReceived = 3;
    string latency = 4;
}

message MemberStatus {
    enum Status {
        ACTIVE = 0; // We are active and responsible for live services
        LEAVING = 1; // ??
        PASSIVE = 2; // okay and waiting to become active
        UNAVAILABLE = 3; // dead
        SUSPICIOUS = 4; // potentially dead but given the benefit of the doubt.
        MONITORING = 5; // Node is permanently passive and monitoring
        UNCONFIGURED = 6; // Node is currently in an un-configured state
    }
    Status status = 1;
}
